fix(superhero-detail.component): add boolean to disable delete button

--- a/src/app/features/superhero/superhero-detail/superhero-detail.component.html
+++ b/src/app/features/superhero/superhero-detail/superhero-detail.component.html
@@ -58,6 +58,7 @@
     </div>
     <div class="col-6">
       <button
+        [disabled]="isNew"
         type="button"
         mat-flat-button
         color="warn"
