--- a/src/app/shared/components/confirm-delete-dialog/confirm-delete-dialog.component.html
+++ b/src/app/shared/components/confirm-delete-dialog/confirm-delete-dialog.component.html
@@ -1,8 +1,8 @@
 <h2 mat-dialog-title>¡Espera!</h2>
 <mat-dialog-content class="mat-typography">
-    <p>¿Estás seguro que deseas descartar los cambios y volver?</p>
+    <p>¿Estás seguro que deseas eliminar este superhéroe?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button [mat-dialog-close]="true" color="warn" cdkFocusInitial>Descartar y volver</button>
+  <button mat-button [mat-dialog-close]="true"  color="warn" cdkFocusInitial>Eliminar</button>
 </mat-dialog-actions>
