fix(superhero-list.component): recharge data when delete item

--- a/src/app/features/superhero/superhero-list/superhero-list.component.html
+++ b/src/app/features/superhero/superhero-list/superhero-list.component.html
@@ -2,7 +2,7 @@
 
 <mat-form-field class="w-100 my-2">
   <mat-label>Buscar</mat-label>
-  <input matInput type="search" placeholder="Escribe un nombre" (input)="filterByName($event)">
+  <input matInput type="search" placeholder="Escribe un nombre">
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" matSort>
