--- a/src/app/features/superhero/superhero-list/superhero-list.component.html
+++ b/src/app/features/superhero/superhero-list/superhero-list.component.html
@@ -10,7 +10,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>
       Nombre
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.name | titlecase }}</td>
   </ng-container>
 
   <ng-container matColumnDef="powers">
@@ -19,7 +19,7 @@
     </th>
     <td mat-cell *matCellDef="let element">
       <mat-chip-listbox>
-        <mat-chip *ngFor="let power of element.powers">{{ power }}</mat-chip>
+        <mat-chip *ngFor="let power of element.powers">{{ power | titlecase }}</mat-chip>
       </mat-chip-listbox>
     </td>
   </ng-container>
@@ -28,7 +28,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>
       Equipo
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.team }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.team | titlecase }}</td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
